refactor: dto 변환 위치 수정 controller -> service